<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/color1menuItem"
        android:title="@string/font_color_1" />
    <item
        android:id="@+id/color2menuItem"
        android:title="@string/font_color_2" />
    <item
        android:id="@+id/color3menuItem"
        android:title="@string/font_color_3" />
    <item android:title="@string/wielkosc_czcionki">
        <menu>
            <item
                android:id="@+id/fontSizeMenuItem1"
                android:title="@string/wielkosc_czcionki_1" />
            <item
                android:id="@+id/fontSizeMenuItem2"
                android:title="@string/wielkosc_czcionki_2" />
            <item
                android:id="@+id/fontSizeMenuItem3"
                android:title="@string/wielkosc_czcionki_3" />
        </menu>
    </item>
    <item
        android:title="@string/checkbox"
        android:icon="@drawable/baseline_check_box_black_18dp"
        app:showAsAction="always">
        <menu>
            <group android:id="@+id/checkboxMenuGroup">
                <item
                    android:id="@+id/checkboxMenuItem1"
                    android:checkable="true"
                    android:checked="false"
                    android:title="@string/red_blue_font" />
                <item
                    android:id="@+id/checkboxMenuItem2"
                    android:checkable="true"
                    android:checked="true"
                    android:title="@string/big_or_small" />
                <item
                    android:id="@+id/checkboxMenuItem3"
                    android:checkable="true"
                    android:checked="false"
                    android:title="@string/background" />
            </group>
        </menu>
    </item>
</menu>